Fixed horizontal scroll that was caused by .footer title position

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,6 +3,7 @@
 
 
 .footer_title {
+    right: 0.1rem;
     mix-blend-mode: difference;
 }
 
